Cultibox (1.1.26) precise; urgency=low
    + Ajout d'une barre de progression pour le chargement des logs + correction des timeouts sur le chargement des logs
    + Correction de l'écriture de la configuration sur la carte SD

-- Yann Genevois <yann.genevois@gmail.com> Sun Jul  7 19:49:46 CEST 2013


Cultibox (1.1.25) precise; urgency=low
    + Sipmlification de l'alarme (on ne règle plus que la température)
    + Réduction de la taille de l'installation (suppréssion de PERL)
    + Les menus 'coût', 'Historique' et 'assistants' sont en options dans la configuration
    + Chaque onglet vérifie maintenant la cohérence entre la base de donnée (configuration des programmes, des prises, des firmware, des options...) et la carte SD
    + Correction du script de postinstallation sur Mac os X, qui attend la fin du redémarrage de XAMPP avant de continuer
    + Divers corrections: problème lors de la création des programmes, mauvaises écriture du calendrier sur la carte...

-- Yann Genevois <yann.genevois@gmail.com> Fri Jun 28 14:51:12 CEST 2013


Cultibox (1.1.24) precise; urgency=low
    + Ajout d'un script de désintallation pour Mac Os X
    + Correction d'un problèe de nom de variable dans la gestion des programmes cycliques
    + Les résumés des actions des prises sont tronquées au bout de 40 actions

-- Yann Genevois <yann.genevois@gmail.com> Mon Jun 17 14:32:30 CEST 2013


Cultibox (1.1.23) precise; urgency=low
    + Ajout des images de faux logs pour les langues: Italien, Allemand et Espagnol
    + Utilisation du terme annotation plutot qu'evènement pour le calendrier
    + Téléchargement de la mise à jour dans la mise page que la page courante
    + Correction de l'affichage des graphes des programmes: l'affichage se s'enmèle plus les pinceaux quand certaines prises sont désactivées
    + Le bouton permettant de sauvegarder et configurer un programme dans l'onglet des prises est caché si la prise est désactivée